hphp/test/zend/bad/ext/gd/tests/imagecharup_error5.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagecharup($image, 1, 5, 'string', 'C', 1);

?>